other/add-imagepullsecrets-for-containers-and-initcontainers/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-imagepullsecrets-for-containers-and-initcontainers
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
