other/add-imagepullsecrets-for-containers-and-initcontainers/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: add-imagepullsecrets-for-containers-and-initcontainers
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../add-imagepullsecrets-for-containers-and-initcontainers.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: podcontroller-resources.yaml
    - apply:
        file: pod-resources.yaml
  - name: step-03
    try:
    - assert:
        file: podcontroller-patched.yaml
    - assert:
        file: pod-resources-patched.yaml
    - error:
        file: pod-not-patched.yaml
